--- a/blogpost.html
+++ b/blogpost.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>blogpost</title>
-    <link rel="stylesheet" href="css/estilos.css">
-</head>
-<body>
-    <h1>
-        Aqui vamos a hacer el blog post
-    </h1>
-    <p>
-        Este es el parrafo inicial
-    </p>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>blogpost</title>
+        <link rel="stylesheet" href="css/estilos.css">
+    </head>
+    <body>
+        <div id="container"> 
+            <div id=" post">
+                <h1>Con las ramas se pueden hacer cosas maravillosas 
+                </h1>
+                <p>Dentro de poco vamos a mostrar las cosas increibles
+                    que se pueden hacer con las ramas asi que no te muevas 
+                y esta muy atento </p>
+            </div>
+        </div>
+    </body>
 </html>
