--- a/blogpost.html
+++ b/blogpost.html
@@ -8,12 +8,15 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <div id="container"> 
+        <div id="container">
+            <div id=" cabecera">
+                Cabecera
+            </div> 
             <div id=" post">
                 <h1>Con las ramas se pueden hacer cosas maravillosas 
                 </h1>
                 <p>Dentro de poco vamos a mostrar las cosas increibles
-                    que se pueden hacer con las ramas asi que no te muevas 
+                    que se pueden hacer con las ramas  asi que no te muevas 
                 y esta muy atento </p>
                 <p>
                     Los blog son la mejor forma de compartir temas interesantes con contenidos extraordinarios
