modifique cabecera a maestro  y el color del texto a blanco u coloque suscripcion

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,8 +9,11 @@
     </head>
     <body>
         <div id="container">
-            <div id=" cabecera">
-                Cabecera
+            <div id="cabecera">
+                <strong>Hyperblog Cuantico "Chorros K DX"</strong>
+                <span id="tagline">
+                    Tu blog de confianza
+                </span>
             </div> 
             <div id=" post">
                 <h1>Con las ramas se pueden hacer cosas maravillosas 
