agregado el contenido al blog, y arruinando la tipografia :D

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,11 @@
                 <p>Dentro de poco vamos a mostrar las cosas increibles
                     que se pueden hacer con las ramas asi que no te muevas 
                 y esta muy atento </p>
+                <p>
+                    Los blog son la mejor forma de compartir temas interesantes con contenidos extraordinarios
+                    no hay limitancias y se puede expresar lo que sientes o conoces, desde tu perspectiva,
+                    asi como comunidad podemos colaborar en el crecimiento mutuo.
+                </p>
             </div>
         </div>
     </body>
