cambiando la fuente a algo desente jajaja

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                <strong>Hyperblog Cuantico "Chorros K DX"</strong>
+                <strong>Hyperblog Cuantico "ChorrosK "</strong>
                 <span id="tagline">
                     Tu blog de confianza
                 </span>
