--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,13 @@
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
-        <div id="container"> 
+        <div id="container">
+            <div id="cabecera">
+                <strong>Hyperblog Cuantico "ChorrosK "</strong>
+                <span id="tagline">
+                    Tu blog maestro 
+                </span>
+            </div> 
             <div id=" post">
                 <h1>Con las ramas se pueden hacer cosas maravillosas 
                 </h1>
@@ -20,6 +26,7 @@
                     no hay limitancias y se puede expresar lo que sientes o conoces, desde tu perspectiva,
                     asi como comunidad podemos colaborar en el crecimiento mutuo.
                 </p>
+                <p><strong>suscribete y dale like</strong></p>
             </div>
         </div>
     </body>
