cargando logo y fondo

--- a/blogpost.html
+++ b/blogpost.html
@@ -10,9 +10,10 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                <strong>Hyperblog Cuantico "ChorrosK "</strong>
+                <img id="logo" src="Imagenes/Assassins-Creed-Logo-PNG-Pic-Background.png">
+                <strong>Hyperblog "</strong>
                 <span id="tagline">
-                    Tu blog maestro 
+                    Tu blog de confianza
                 </span>
             </div> 
             <div id=" post">
@@ -26,7 +27,7 @@
                     no hay limitancias y se puede expresar lo que sientes o conoces, desde tu perspectiva,
                     asi como comunidad podemos colaborar en el crecimiento mutuo.
                 </p>
-                <p><strong>suscribete y dale like</strong></p>
+                <p id="suscribete"><strong>suscribete y dale like</strong></p>
             </div>
         </div>
     </body>
