cambiando el contenido del blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,23 +11,25 @@
         <div id="container">
             <div id="cabecera">
                 <img id="logo" src="Imagenes/Assassins-Creed-Logo-PNG-Pic-Background.png">
-                <strong>Hyperblog "</strong>
+                <strong>Assassin's Hyperblog "</strong>
                 <span id="tagline">
-                    Tu blog de confianza
+                    El blog del maestro .
                 </span>
             </div> 
             <div id=" post">
-                <h1>Con las ramas se pueden hacer cosas maravillosas 
+                <h1>
+                    El camino de un asesino es doloroso y estrecho. 
                 </h1>
-                <p>Dentro de poco vamos a mostrar las cosas increibles
-                    que se pueden hacer con las ramas  asi que no te muevas 
-                y esta muy atento </p>
                 <p>
-                    Los blog son la mejor forma de compartir temas interesantes con contenidos extraordinarios
-                    no hay limitancias y se puede expresar lo que sientes o conoces, desde tu perspectiva,
-                    asi como comunidad podemos colaborar en el crecimiento mutuo.
+                    El camino es honorable, protegiendo a los debiles de los mas fuertes y tiranos,
+                la mision de un asaesino es enfrentar a los templarios,
+                para frustrar sus planes de conquista.
                 </p>
-                <p id="suscribete"><strong>suscribete y dale like</strong></p>
+                <p>
+                    Y asi poder traer al mundo la paz, te necesitamos,
+                    asi que unete a la causa en este blog, proximamente subiremos instrucciones.
+                </p>
+                <p id="suscribete"><strong>suscribete y dale like.</strong></p>
             </div>
         </div>
     </body>
