agregando modificaciones al footer

--- a/blogpost.html
+++ b/blogpost.html
@@ -26,7 +26,7 @@
                     no hay limitancias y se puede expresar lo que sientes o conoces, desde tu perspectiva,
                     asi como comunidad podemos colaborar en el crecimiento mutuo.
                 </p>
-                <p><strong>suscribete y dale like</strong></p>
+                <p id="suscribete"><strong>suscribete y dale like.</strong></p>
             </div>
         </div>
     </body>
