retoques del div suscribete

--- a/blogpost.html
+++ b/blogpost.html
@@ -29,8 +29,8 @@
                     Y asi poder traer al mundo la paz, te necesitamos,
                     asi que unete a la causa en este blog, proximamente subiremos instrucciones.
                 </p>
-                <p id="suscribete"><strong>suscribete y dale like.</strong></p>
-            </div>
-        </div>
+                </div>
+            <div id ="suscribete"> <strong>suscribete y dale like.</strong></div>
+         </div>
     </body>
 </html>
