rectificando horrores ortograficos

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
                 <img id="logo" src="Imagenes/Assassins-Creed-Logo-PNG-Pic-Background.png">
                 <strong>Assassin's Hyperblog "</strong>
                 <span id="tagline">
-                    El blog del maestro .
+                    El blog del maestro.
                 </span>
             </div> 
             <div id=" post">
@@ -22,11 +22,11 @@
                 </h1>
                 <p>
                     El camino es honorable, protegiendo a los debiles de los mas fuertes y tiranos,
-                la mision de un asaesino es enfrentar a los templarios,
+                la mision de un asesino es enfrentar a los templarios,
                 para frustrar sus planes de conquista.
                 </p>
                 <p>
-                    Y asi poder traer al mundo la paz, te necesitamos,
+                    Y asi poder traer al mundo la paz... Te necesitamos,
                     asi que unete a la causa en este blog, proximamente subiremos instrucciones.
                 </p>
                 </div>
