agregando una imagen al blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE htmli>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -25,6 +25,7 @@
                 la mision de un asesino es enfrentar a los templarios,
                 para frustrar sus planes de conquista.
                 </p>
+		<p><img src="Imagenes/altair.jpg" width="100%"/></p>
                 <p>
                     Y asi poder traer al mundo la paz... Te necesitamos,
                     asi que unete a la causa en este blog, proximamente subiremos instrucciones.
