--- a/blogpost.html
+++ b/blogpost.html
@@ -25,7 +25,7 @@
                 la mision de un asesino es enfrentar a los templarios,
                 para frustrar sus planes de conquista.
                 </p>
-		<p><img src="Imagenes/altair.jpg" width="100%"/></p>
+		<p><ahref="https://imgur.com/xjFna7U"><img src="https://i.imgur.com/xjFna7U.jpg" width= "100%"/></a></p>
                 <p>
                     Y asi poder traer al mundo la paz... Te necesitamos,
                     asi que unete a la causa en este blog, proximamente subiremos instrucciones.
