--- a/blogpost.html
+++ b/blogpost.html
@@ -25,7 +25,7 @@
                 la mision de un asesino es enfrentar a los templarios,
                 para frustrar sus planes de conquista.
                 </p>
-		<p><ahref="https://imgur.com/xjFna7U"><img src="https://i.imgur.com/xjFna7U.jpg" width= "100%"/></a></p>
+		<p><ahref="https://imgur.com/MJ82SvS"><img src="https://i.imgur.com/MJ82SvS.jpeg" width= "100%"/></a></p>
                 <p>
                     Y asi poder traer al mundo la paz... Te necesitamos,
                     asi que unete a la causa en este blog, proximamente subiremos instrucciones.
