"cambiando tag line y color del footer :) "

--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
                 <img id="logo" src="Imagenes/Assassins-Creed-Logo-PNG-Pic-Background.png">
                 <strong>Assassin's Hyperblog "</strong>
                 <span id="tagline">
-                    El blog del maestro.
+                    El blog Maestro.
                 </span>
             </div> 
             <div id=" post">
